--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         //agp_version = agp_version
         agp_version1 = '7.4.2'
         agp_version2 = '4.2.2'
+        agp_version = '8.6.0'
     }
     repositories {
         jcenter()
@@ -12,7 +13,7 @@ buildscript {
     }
     dependencies {
         //classpath 'com.android.tools.build:gradle:2.1.2'
-        classpath 'com.android.tools.build:gradle:8.7.2'
+        classpath "com.android.tools.build:gradle:$agp_version"
     }
 }
 
